syntax = "proto3";

package this;
option go_package="./";

message Request {
  string ping = 1;
}

message Response {
  string pong = 1;
}

//用户
message User {
  int64 id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  string phone = 5;
}

message UserRegisterRequest {
  User u = 1;
}

message UserRegisterResponse {
}

message UserLoginRequest {
  User u = 1;
}
message UserLoginResponse {
}

message UserListRequest {
  User u = 1;
}
message UserListResponse {
  repeated User users = 1;
}


message UserPasswordRecoveryRequest {
  User u = 1;
}
message UserPasswordRecoveryResponse{
  User u = 1;
}

service This {
  rpc Ping(Request) returns(Response);

  rpc UserRegister(UserRegisterRequest)returns(UserRegisterResponse);

  rpc UserLogin(UserLoginRequest)returns(UserLoginResponse);

  rpc UserLoginByPhone(UserLoginRequest)returns(UserLoginResponse);

  rpc UserList(UserListRequest) returns(UserListResponse);

  rpc UserPasswordRecovery(UserPasswordRecoveryRequest)returns(UserPasswordRecoveryResponse);
}
